--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -16,7 +16,7 @@
                     <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">The volume of a pizza with radius z and uniform thickness a is pi zz a. ❤</h6>
                 <div class="btns-container">
                     <!-- <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a> -->
-                    <a href="https://urbanacro.com/events/urban-acro-festival-2023" class="btn btn-md" >Register</a>
+                    <a href="https://www.urbanacro.com/events/7th-urban-acro-festival/" class="btn btn-md" >Register</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
                         <!-- <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a> -->
-                        <a href="https://urbanacro.com/events/urban-acro-festival-2023/" class="pull-right buy-btn" >Register</a>
+                        <a href="https://www.urbanacro.com/events/7th-urban-acro-festival/" class="pull-right buy-btn" >Register</a>
                     </div>
                 </div>
             </div>
@@ -784,7 +784,7 @@
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="https://urbanacro.com/events/urban-acro-festival-2023" class="btn btn-lg btn-white" >Register</a>
+                        <a href="https://www.urbanacro.com/events/7th-urban-acro-festival/" class="btn btn-lg btn-white" >Register</a>
                     </div>
                 </div>
             </div>
