--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -213,7 +213,7 @@
             <br />
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/duofuria_urbanacro_festival.jpg' %}" alt="Duo Furia of Chile at the urbanacro festival in Zürich" class="img-responsive"></div>
                     <h3 class="name">{% tinycontent_simple "urbanacro_teachers_teacher1_name" %}</h3>
                     <p class="text-alt"><small>{% tinycontent_simple "urbanacro_teaschers_teacher1_team" %}</small></p>
                     <p class="about">{% tinycontent_simple "urbanacro_teachers_teacher1_about" %}</p>
@@ -224,7 +224,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/albertoalfonso_urbanacro_festival.jpg' %}" alt="Alberto and Alfonso organizers of the icarian convention and DAP at the urbanacro festival in zürich" class="img-responsive"></div>
                     <h3 class="name">{% tinycontent_simple "urbanacro_teachers_teacher2_name" %}</h3>
                     <p class="text-alt"><small>{% tinycontent_simple "urbanacro_teaschers_teacher2_team" %}</small></p>
                     <p class="about">{% tinycontent_simple "urbanacro_teachers_teacher2_about" %}</p>
@@ -235,23 +235,12 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/cielagom_urbanacro_festival.jpg' %}" alt="Ciel Agom with Isaiah from Belgium at the urbanacro festival in zürich" class="img-responsive"></div>
                     <h3 class="name">{% tinycontent_simple "urbanacro_teachers_teacher3_name" %}</h3>
                     <p class="text-alt"><small>{% tinycontent_simple "urbanacro_teaschers_teacher3_team" %}</small></p>
                     <p class="about">{% tinycontent_simple "urbanacro_teachers_teacher3_about" %}</p>
                     <ul class="speaker-socials">
                         {% tinycontent_simple "urbanacro_teacher3_instagram" %}
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
-                    <h3 class="name">{% tinycontent_simple "urbanacro_teachers_teacher4_name" %}</h3>
-                    <p class="text-alt"><small>{% tinycontent_simple "urbanacro_teaschers_teacher4_team" %}</small></p>
-                    <p class="about">{% tinycontent_simple "urbanacro_teachers_teacher4_about" %}</p>
-                    <ul class="speaker-socials">
-                        {% tinycontent_simple "urbanacro_teacher4_instagram" %}
                     </ul>
                 </div>
             </div>
@@ -529,7 +518,7 @@
                                             <div id="schedule3_day2_main_time11" class="panel-collapse collapse schedule-item-body">
                                                 <article>
                                                     <strong class="highlight speaker-name">Celine</strong><br>
-                                                    <p class="description">Thaymassage</p>
+                                                    <p class="description">Thai massage</p>
                                                     <strong class="highlight speaker-name">Uwe + Jasmina</strong>
                                                     <p class="description">Soon</p>
                                                     <strong class="highlight speaker-name">Jarno + Natasha</strong>
@@ -775,7 +764,7 @@
                     <div class="package-column package-bright special-column">
                         <h6 class="package-title">Full Festival</h6>
                         <div class="package-price">
-                            <span class="currency">CHF</span>230.-
+                            <span class="currency">CHF</span>240.-
                         </div>
                         <div class="package-detail">
                             <ul>
