--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -716,7 +716,7 @@
                                         <!-- Lecture start -->
                                         <div class="panel schedule-item">
                                             <div class="lecture-icon-wrapper">
-                                                <span class="fa fa-handshake"></span>
+                                                <span class="fa fa-handshake-o"></span>
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day3_main_timeline" href="#schedule3_day3_main_time8" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>17:00</strong>
@@ -725,6 +725,22 @@
                                             <div id="schedule3_day3_main_time8" class="panel-collapse collapse schedule-item-body">
                                                 <article>
                                                         <p class="description"> Hoping all had a wonderful time we wanted to ask you to help us clean the house :)! Thanks you all! </p>
+                                                </article>
+                                            </div>
+                                        </div>
+                                        <!-- Lecture end -->
+                                        <!-- Lecture start -->
+                                        <div class="panel schedule-item">
+                                            <div class="lecture-icon-wrapper">
+                                                <span class="fa fa-flag-checkered"></span>
+                                            </div>
+                                            <a data-toggle="collapse" data-parent="#schedule3_day3_main_timeline" href="#schedule3_day3_main_time8" class="schedule-item-toggle collapsed">
+                                                <strong class="time highlight"><span class="icon icon-office-24"></span>17:30</strong>
+                                                <h6 class="title">Closing Circle<i class="icon icon-arrows-06"></i></h6>
+                                            </a>
+                                            <div id="schedule3_day3_main_time8" class="panel-collapse collapse schedule-item-body">
+                                                <article>
+                                                        <p class="description">Good bye circle</p>
                                                 </article>
                                             </div>
                                         </div>
