Changes in layout location

--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -24,7 +24,7 @@
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_dorms' %}</h3>
             {% tinycontent_simple 'winter_accomodation_dorms' %}
-            <span class="image right">
+            <span class="image left">
                     <img src="{% static "winteracro/images/rooms_winter_acro_urbanacro.jpg" %}" alt="winter accommodation for the urbanacro winter acro festival" />
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade1' %}</h3>
@@ -43,9 +43,6 @@
             {% tinycontent_simple 'winter_accomodation_extra' %}
         </section>
         <section id="hall" class="main">
-            <span class="image main">
-                <img src="{% static "winteracro/images/tschlin_winter_acro_urbanacro.webp"%}" alt="Tschlin location of the winter acro festival" />
-            </span>
             <h1>Hall</h1>
             <h2>{% tinycontent_simple 'winter_hall_title' %}</h2>
             <p>{% tinycontent_simple 'winter_hall_description' %}</p>
