--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -36,10 +36,11 @@
             </span>
             <h3>{% tinycontent_simple 'winter_accomodation_title_upgrade2' %}</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade2' %}
+            <br>
             <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_address_url' %}">
                     Google Maps CLICK HERE
             </a>
-            </br></br>
+            </br>
             </p>
             <h3>Some other extra infos:</h3>
             {% tinycontent_simple 'winter_accomodation_extra' %}
@@ -54,7 +55,7 @@
             </span>
             <h3>{% tinycontent_simple 'winter_hall_spa' %}</h3>
             {% tinycontent_simple 'winter_hall_spa_description' %}
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_address_url' %}">
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_hall_address_url' %}">
                     Google Maps CLICK HERE
             </a>
             </br></br>
